float_eq/tests/derive_tests/errors/float_ulps_enum.stderr
error: FloatUlps may only be derived for structs.
 --> $DIR/float_ulps_enum.rs:4:6
  |
4 | enum SomeEnum {
  |      ^^^^^^^^
